# ResNet18LibTorch

./: CMakeLists.txt  README.md
assets/: intel-classes.txt
include/: utils.hpp
src/: main.cpp  utils.cpp
